--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@ html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"content="width=device-width,initial-scale=1.0">
-  <title>About Me</title>
+  <title>My First GitHub Page</title>
 </head>
 <body>
   <header>
-     <h1>About Me</h1>
+     <h1>Welcome to My Website!</h1>
      <nav>
         <a href="index.html">Home</a>/
         <a href="about.html"About</a>/
